--- a/antigo/index.html
+++ b/antigo/index.html
@@ -61,10 +61,8 @@
                 <h2><p>Grand Theft Auto V (GTA V) é um jogo de ação-aventura lançado em 2013 pela Rockstar Games. Ambientado no estado fictício de San Andreas, o jogo segue três protagonistas: Michael, Franklin e Trevor, enquanto eles realizam assaltos e outras atividades criminosas.
 
                     O jogo é conhecido por seu vasto mundo aberto, narrativa envolvente e jogabilidade diversificada, incluindo um modo multiplayer online, GTA Online. Foi amplamente aclamado pela crítica, apesar de algumas controvérsias sobre seu conteúdo violento.</p></h2>
-                    <iframe width="1280" height="720" src="https://www.youtube.com/embed/QkkoHAzjnUs" title="Grand Theft Auto V Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-
-    
+                    <iframe width="1280" height="720ls" src="https://www.youtube.com/embed/QkkoHAzjnUs" title="Grand Theft Auto V Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                  
 
 
 
@@ -74,5 +72,5 @@
 
 
 
-    </body>
+     </body>
  </html>
