--- a/index-2.html
+++ b/index-2.html
@@ -8,23 +8,23 @@
 </head>
 
 <body>
-    <h1>Bem-vindo ao Fauna Segura</h1><br>
-    Encontrar animais selvagens como cobras, aranhas e escorpiões pode ser uma experiência assustadora,
+    <h1 class="Titulo">Bem-vindo ao Fauna Segura</h1>
+    <p>Encontrar animais selvagens como cobras, aranhas e escorpiões pode ser uma experiência assustadora,
     mas com as informações corretas, você pode lidar com essas situações de maneira segura e eficaz.
     Nosso objetivo é fornecer orientações claras e práticas para ajudar você a reconhecer, prevenir e agir corretamente
-    ao encontrar esses animais. <br>
+    ao encontrar esses animais.</p>
 
-    <p> Neste site, você encontrará:</p>
+     <h2>Neste site, você encontrará:</h2>
     <ul>
         <li>Identificação: Aprenda a identificar as espécies mais comuns e perigosas.</li>
         <li>Prevenção: Dicas para evitar encontros indesejados com animais selvagens.</li>
         <li>Ações: Passos a seguir ao encontrar um animal, garantindo sua segurança e a do animal.</il>
         <li>Recursos: Informações sobre o Instituto Ampara Animal e como você pode contribuir para a proteção dos
             animais.</li>
-    </ul><br>
+    </ul>
     Estamos comprometidos em promover a convivência harmoniosa entre humanos e animais, respeitando a natureza e
     garantindo a segurança de todos.
-    Explore nosso site e fique preparado para lidar com qualquer situação envolvendo animais <br>
+    Explore nosso site e fique preparado para lidar com qualquer situação envolvendo animais
 
     <p>
     <h3>Cobras</h3>
@@ -38,7 +38,7 @@
         <li>Prevenção: Dicas para evitar encontros com cobras, como manter o quintal limpo e vedar frestas.</li>
         <li>O que fazer: Passos a seguir ao encontrar uma cobra, como manter a calma, não tentar capturá-la e chamar uma
             equipe especializada.</li>
-    </ol><br>
+    </ol><br
     <p>
     <h3>Aranhas</h3>
     </p>
